--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,7 @@ body {
     font-family: 'BPG Glaho Bold', sans-serif;
 }
 
+/* ---------- header ----------- */
 header {
     width: 1440px;
     background-color: #2A9D8F;
@@ -46,6 +47,8 @@ header {
 
 }
 
+/* ---------- section ----------- */
+
 section {
     width: 1440px;
     margin: auto;
@@ -87,8 +90,8 @@ section {
 }
 
 .section-button {
-width: 146px;
-height: 48px;
+    width: 146px;
+    height: 48px;
     background-color: #2A9D8F;
     border: none;
     font-weight: 700;
@@ -99,3 +102,38 @@ height: 48px;
     text-align: center;
     color: #FFFFFF;
 }
+
+/* ---------- footer ----------- */
+footer {
+    width: 1440px;
+    margin: auto;
+    background-color: #2A9D8F;
+    padding: 38px 654px;
+}
+
+.footer-title {
+    display: inline-block;
+    font-weight: 400px;
+    font-style: Regular;
+    font-size: 30px;
+    text-decoration: underline;
+    text-underline-offset: 8px;
+    line-height: 40px;
+    letter-spacing: 0px;
+    text-align: center;
+    color: #FFFFFF;
+    margin-bottom: 40px;
+}
+
+.footer-img-link {
+    display: inline-block;
+    width: 18px;
+    height: 18px;
+    margin-right: 10px;
+}
+
+.footer-img {
+    width: 100%;
+    height: 100%;
+}
+
